# ncpol3sdpa

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENCE  Plan.md  README.md  SUIVI.md  code exercice2, doit être modifié.py  exercice_optimisation.py  github-actions-demo.yml  global-plan.md  index.html  main.py  notes040325.txt  planning.md  pyproject.toml  python-poly-opt.tex  tach.toml  taches.md
.github/workflows/: build-test.yml  github-actions-demo.yml  html-doc.yml  static.yml
Bibliographie/: bibliographie.bib
Exercises/: Ex1.md  Ex3.md  ex2_by_math.md  ex3_cvxpy.py  ex3_picos.py  exercice_optimisation.py  exercice_optimisation_nazar_level1.py
design/: global-plan.md
design/ground_state/: main.md
design/maths-notes/: Lagrangian-Optimization.md  notes040325.txt
design/maths-notes/Bibliographie/: project-description.txt
design/maths-notes/Exercises/: Ex1.md  Ex3.md  ex2_avec_cvxpy.py  ex2_by_math.md  ex3_cvxpy.py  ex3_picos.py  exercice_optimisation.py  exercice_optimisation_nazar_level1.py  test_format.py
design/presentation-audit/: consigne.md  presentation-diapo.tex  presentation.md
design/presentation-impact/: python-poly-opt.tex
docs/: Makefile  sos_duality_derivation.md
docs/graphs/: tach_graph.dot
docs/scripts/: visualize_coverage.py
docs/source/: aboutus.rst  api.rst  basics.rst  bibliographie.rst  bibliography.rst  conf.py  constraints.rst  coverage.xml  examples.rst  funs.rst  generate_docs.py  index.rst  momentmatrix.rst  monomial.rst  ncpol3sdpa.rst  organization.rst  problem.rst  quickstart.rst  rules.rst  solver.rst  sos.rst  visualize_coverage.py
examples/: __init__.py  maxcut.py
examples/ground_state/: __init__.py  ground_state.py  ground_state_v2.py
src/: constraints.py  equality_constraints.py  main.py  momentmatrix copy.py  momentmatrix.py  monomial.py  problem.py  solver.py
src/ncpol3sdpa/: __init__.py  algebra.py  algebra_to_SDP.py  bell_inequality.py  constraints.py  equality_constraints.py  funs.py  main.py  moment_matrix_sdp.py  momentmatrix.py  monomial.py  problem.py  rank_loop.py  rules.py  sdp_repr.py  sdp_solution.py  semidefinite_program_repr.py  solver.py  sos.py
src/ncpol3sdpa/ground_state/: __init__.py  ground_state_v2.py
src/ncpol3sdpa/resolution/: __init__.py  algebra.py  algebra_sdp_complex.py  algebra_sdp_nc.py  algebra_sdp_nc_complex.py  algebra_sdp_nc_real.py  algebra_sdp_real.py  constraints.py  create_algebra.py  monomial.py  rules.py  utils.py
src/ncpol3sdpa/resolution/rules/: __init__.py  rules.py  rules_commutative.py  rules_noncommutative.py
src/ncpol3sdpa/sdp_repr/: __init__.py  eq_constraint.py  inequality_scalar_constraint.py  moment_matrix_SDP.py  problem_SDP.py
src/ncpol3sdpa/solvers/: __init__.py  cvxpy_solver.py  mosek_solver.py  solver.py  solver_factory.py  solver_registry.py
src/ncpol3sdpa/sos/: __init__.py  solution_real_to_complex.py  sos.py
src/typing_stubs/cvxpy/: __init__.pyi  error.pyi  settings.pyi
src/typing_stubs/cvxpy/atoms/: __init__.pyi  atom.pyi  axis_atom.pyi  condition_number.pyi  cummax.pyi  (+46 more)
src/typing_stubs/mosek/: __init__.pyi
src/typing_stubs/sympy/: __init__.pyi  abc.pyi
testing/advanced_tests/: advanced_test.py
testing/draw_strategies/: float_strategies.py  polynomials.py  problem.py  sdp_repr.py
testing/tests/: err.py  test.md  test_algebra_real.py  test_bell_inequality.py  test_equality_constraint.py  test_ground_state.py  test_maxcut.py  test_momentmatrix.py  test_monomials.py  test_problem.py  test_rank_loop.py  test_rules.py  test_solver.py  test_sos.py  test_utils.py
tests/: test.md  test1.py  test_1.py  test_equality_constraint.py  test_maxcut.py  test_momentmatrix.py  test_monomials.py  test_mosek.py  test_problem.py  test_solver.py  test_sos.py  test_typing.py
(+915 files in other folders)
