[project]
name = "ncpol3sdpa"
version = "0.1.0"
description = "Python package for solving polynomial optimization problems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.6.3",
    "dot>=0.3.0",
    "mypy>=1.15.0",
    "sphinx>=8.2.3",
    "sympy>=1.13.3",
    "tach>=0.28.4",
    "pytest>=8.3.4",
    "mosek>=11.0.13",
    "pyvis>=0.3.2",
    "networkx>=3.4.2",
    "pydeps>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheels]
packages = ["src/ncpol3sdpa"]

[tool.ruff]
indent-width = 4
exclude = ["Exercises", "src/typing_stubs"]

[tool.ruff.lint]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
exclude = ["main.py"]
follow_untyped_imports = true
files = ["src/ncpol3sdpa","tests"]
python_executable = ".venv/bin/python"
mypy_path = "src/typing_stubs"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = [
    "tests"
]
